Fix footer text wrapping

--- a/style.scss
+++ b/style.scss
@@ -561,6 +561,19 @@ footer {
     margin-right:-15px;
   }
 }
+@media screen and (max-width:1360px) {
+  footer .tell-us-why p {
+    font-size: 20px;
+    line-height: 85px;
+    text-align: right;
+    padding-right: 10px;
+  }
+}
+@media screen and (max-width:1150px) {
+  footer .tell-us-why p {
+    font-size: 16px;
+  }
+}
 @media screen and (max-width:1240px) {
   #slide-1, #slide-1-container {
     min-height:1000px;
